changed api key for fb

--- a/public/templates/temp29.html
+++ b/public/templates/temp29.html
@@ -22,7 +22,7 @@
 				<canvas id="waves" width="700" height="300"></canvas>
 			</div>
 			<div class="spotify-music-player" ng-bind-html="audio | unsafe">
-				<!-- <audio ng-src="{{audio}} " controls autoplay=""></audio> -->
+				<!-- <audio ng-src="{{audio}} " controls autoplay="autoplay"></audio> -->
 				<img src="assets/spotify-player.png">
 			</div>
 			<div class="spotify-music-name">
