removed loader in weather

--- a/public/templates/temp12.html
+++ b/public/templates/temp12.html
@@ -3,9 +3,9 @@
     <div ng-show="currentTemp == 'templates/temp12.html'">
 
 
-            <div class="weather-loader">
+<!--             <div class="weather-loader">
                 <div class="loader"></div>
-            </div>
+            </div> -->
 
             <div class="weather" ng-style="{'background-image': 'url(' + weather_background + ')'}">
                 <div class="head">
