added portrait for ikomai

--- a/public/templates/temp17.html
+++ b/public/templates/temp17.html
@@ -1,7 +1,7 @@
  <div ng-show="currentTemp == 'templates/temp17.html'">
-    <div class="news-loader">
+<!--     <div class="news-loader">
       <div class="loader"></div>
-    </div>
+    </div> -->
    
     <div class="news-portrait news-animation" ng-style="{'background-image': 'linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.2)), url(' + news.featuredImage + ')'}">
       
