--- a/public/templates/temp18.html
+++ b/public/templates/temp18.html
@@ -1,7 +1,7 @@
 
-<div class="weather-loader">
+<!-- <div class="weather-loader">
     <div class="loader"></div>
-</div>
+</div> -->
    
 <div class="weather-portrait" ng-style="{'background-image': 'url(' + weather_background + ')'}">
     <div class="head">
