--- a/public/css/base.css
+++ b/public/css/base.css
@@ -971,6 +971,7 @@ body {
 .news-portrait .news-upper .news-headline {
   text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, .2);
   margin-bottom: 1.5em;
+  margin-top: 2.5em;
 }
 .news-portrait .news-upper .news-headline h1 {
   font-size: 1.2em;
@@ -997,7 +998,7 @@ body {
 }
 .news-portrait .news-upper .news-description p {
   font-size: 1em;
-  line-height: 1em;
+  line-height: 1.3em;
 }
 .news-portrait .news-aside {
   text-align: right;
@@ -1020,7 +1021,6 @@ body {
 .news-portrait .news-aside .news-item h1 {
   font-size: 0.7em;
   line-height: 1.5em;
-  margin-bottom: 1em;
   font-weight: 400;
 }
 .news-portrait .news-aside .news-item p {
@@ -1098,9 +1098,10 @@ body {
   animation: leftToRight;
 }
 .weather-portrait .weather-icon {
-  font-size: 5em;
-  top: 0.45em;
-  right: 1.3em;
+  font-size: 6em;
+  top: 0.3em;
+  right: .7em;
+  text-align: center;
   position: absolute;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -1109,8 +1110,10 @@ body {
 }
 .weather-portrait h3 {
   display: inline-block;
-  margin-top: 0.5em;
-  font-size: 2em;
+  margin-top: 1.5em;
+  font-size: 3.5em;
+  width: 100%;
+  text-align: center;
 }
 .weather-portrait h5 {
   font-weight: 100;
@@ -1142,14 +1145,15 @@ body {
   font-size: 3em;
 }
 .weather-portrait p.weather-location {
-  font-size: 0.7em;
+  font-size: 1.5em;
   margin-top: 0.3em;
   margin-bottom: 0.2em;
+  text-align: center;
 }
 .weather-portrait p {
   display: block;
-  font-size: 0.9em;
-  text-align: right;
+  font-size: 1em;
+  text-align: center;
 }
 .weather-portrait h6 {
   font-weight: 100;
