--- a/public/templates/temp4.html
+++ b/public/templates/temp4.html
@@ -1,3 +1,4 @@
-<div ng-style="temp4DivStyle">
+<div ng-style="temp4DivStyle" style="width: 100vw; height: 100vh;">
 	<!-- <div ng-style="temp4Text">Dolphins Everywhere</div> -->
+	<img ng-src="{{imgSrc}}" ui-event="{  error:'errorplayingFile()' }" style="width: 100vw; height: 100vh;" />
 </div>
