--- a/public/templates/temp2.html
+++ b/public/templates/temp2.html
@@ -1,1 +1,2 @@
-<video ng-style="temp2VideoStyle" id='temp2Video' ng-src="{{temp2Src.video}}" ui-event="{ ended : 'temp2VideoEnd()'}" ></video>
+<video ng-style="temp2VideoStyle" id='temp2Video' ng-src="{{temp2Src.video}}" ui-event="{ ended : 'temp2VideoEnd()', error:'errorplayingVideo()' }"></video> 
+
