--- a/public/css/temp33.css
+++ b/public/css/temp33.css
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1em solid white;
+  /*border: 1em solid white;*/
 }
 #facebook-reactions .facebook-background img {
   margin: 0 auto;
