--- a/public/css/temp12.css
+++ b/public/css/temp12.css
@@ -126,26 +126,13 @@
 	font-weight: bold;
 }
 
-
 @keyframes rotate {
-	0%{
-		transform: rotate(0deg)
-	}
-	20%{
-		transform: rotate(90deg)
-	}
-	40%{
-		transform: rotate(180deg) scale(1.1);
-	}
-	60%{
-		transform: rotate(270deg)
-	}
-	80%{
-		transform: rotate(360deg) scale(1);
-	}
-	100%{
-		transform: rotate(438deg)
-	}
+	from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
 }
 
 #sunray{
