--- a/public/css/temp31.css
+++ b/public/css/temp31.css
@@ -180,7 +180,7 @@
   font-size: 1.3em;
   z-index: 5;
   bottom: 1em;
-  right: 1em;
+  left: 1.5em;
   text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, .6);
 }
 .instagram-hashtag .insta-info img {
