--- a/public/templates/temp1.html
+++ b/public/templates/temp1.html
@@ -1,4 +1,3 @@
 <div ng-show="currentTemp == 'templates/temp1.html'">
-
-
+  <iframe src="/programmatic" style="width: 100vw; height: 100vh"></iframe>
 </div>
