xAPI local saving/caching of rubicon ad response

--- a/public/templates/temp1.html
+++ b/public/templates/temp1.html
@@ -1,3 +1,4 @@
-<div ng-show="currentTemp == 'templates/temp1.html'">
-  <iframe src="/programmatic" style="width: 100vw; height: 100vh"></iframe>
-</div>
+<div
+  ng-show="currentTemp == 'templates/temp1.html'"
+  id="programmatic_div"
+></div>
