--- a/views/programmatic.ejs
+++ b/views/programmatic.ejs
@@ -1,20 +1,28 @@
 <html>
 <head>
-  <script src="scripts/jquery.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </head>
 <body id="body">
+  <input type="hidden" id="CampaignID" value=<%= CampaignID %>>
 </body> 
 <script>
-  $.ajax({
-    url: "/get-programmatic-campaign",
-    method: "GET",
-    success: function (res) {
-      console.log(res);
-      var markup = res.response.body.seatbid[0].bid[0].adm;
-      document.write(
-        "<scr" + "ipt type='text/javascript'>" + markup + "</scr" + "ipt>"
-      );
-    }
+  $(document).ready(function () {
+    var CampaignID = $("#CampaignID").val();
+    $.ajax({
+      url: "/get-programmatic-campaign/" + CampaignID,
+      method: "GET",
+      success: function (res) {
+        console.log(res);
+        var markup = res.seatbid[0].bid[0].adm;
+        document.write(
+          "<scr" + "ipt type='text/javascript'>" + markup + "</scr" + "ipt>"
+        );
+      }
+    })
   })
+ 
 </script>
 </html>
