--- a/public/css/temp38.css
+++ b/public/css/temp38.css
@@ -3,7 +3,8 @@
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   padding: 15px;
   font-family: "Arial";
 }
@@ -80,6 +81,8 @@
 }
 
 .title h4 {
+  text-align: center;
+  font-size: 25px;
   font-family: 100;
 }
 
