--- a/public/templates/temp39.html
+++ b/public/templates/temp39.html
@@ -1,1 +1,34 @@
-<div class="covid-19-portrait"></div>
+<div ng-show="currentTemp == 'templates/temp39.html'" class="container">
+  <div class="col-12 title">
+    <h1>COVID-19 CASES UPDATE IN {{ COVID19.city.toUpperCase() }}</h1>
+    <h4>AS OF {{ COVID19.asOf }}</h4>
+  </div>
+  <div class="col-12 body animated fadeInUp">
+    <div class="col-6 divider">
+      <div class="col-12 cdr">
+        <div class="col-12 cdr-item">
+          <h1 class="cdr-confirmed-count">
+            {{ COVID19.data.cdr.confirmed }}
+          </h1>
+          <h3 class="cdr-confirmed-title">
+            CONFIRMED COVID-19 CASES IN YOUR CITY
+          </h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-6 divider">
+      <div class="col-12 cdr">
+        <div class="col-12 cdr-item">
+          <h1 class="cdr-item-count">{{ COVID19.data.cdr.deaths }}</h1>
+          <h3 class="cdr-item-title">DECEASED</h3>
+        </div>
+        <div class="col-12 cdr-item">
+          <h1 class="cdr-item-count">
+            {{ COVID19.data.cdr.recovered }}
+          </h1>
+          <h3 class="cdr-item-title">RECOVERED</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
