--- a/public/css/temp38.css
+++ b/public/css/temp38.css
@@ -234,3 +234,49 @@
 .location-item-title {
   color: white;
 }
+
+.sponsor {
+  width: 100vw;
+  height: 100vh;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
+}
+
+.sponsor-title {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.sponsor-title h1 {
+  color: black;
+  font-size: 28px;
+  font-weight: 100;
+  background-color: white;
+  font-style: italic;
+  padding: 5px;
+}
+
+.sponsor-images {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.sponsor-image-item {
+  height: 200px;
+  margin: 50px;
+}
+
+.sponsor-image {
+  height: 180px;
+}
